--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
             "last 1 firefox version",
             "last 1 safari version"
         ],
-        "homepage": "https://leejin21.github.io/movie_app_2020"
+        "homepage": "https://leejin21.github.io/movie_app_2020/"
     }
 }
